fix: 1-LOCAL_MANUFACTURER checks and status/reason value for LM 2-GMSA compliant check with same brand/model 3- source value=Stolen for blacklist/blacklisthis and greylist/greylisthis